# 10-K-Rag

./: QA_benchmark.json  README.md  app.py  benchmark_rag.ipynb  combine_json.ipynb  generate_dataset.ipynb  main.py  parse_documents.ipynb  pyproject.toml  query_results.json
.lightning_studio/: on_start.sh
Benchmarks/: AAPL_QA.json  AMZN_QA.json  AVGO_QA.json  CRM_QA.json  GOOGL_QA.json  META_QA.json  MSFT_QA.json  NVDA_QA.json  ORCL_QA.json  QAs.json  Questions.txt  TSLA_QA.json
Benchmarks/AAPL_QA/: Apple_10K_2019._QAjson.json  Apple_10K_2020_QA.json  Apple_10K_2021_QA.json  Apple_10K_2022_QA.json  Apple_10K_2023_QA.json
Benchmarks/AMZN_QA/: Amazon_10K_2020_QA.json  Amazon_10K_2021_QA.json  Amazon_10K_2022_QA.json  Amazon_10K_2023_QA.json  Amazon_10K_2024_QA.json
Benchmarks/AVGO_QA/: Broadcom_2019_QA_Pairs.json  Broadcom_2020_QA_Pairs (1).json  Broadcom_2021_QA_Pairs.json  Broadcom_2022_QA_Pairs.json  Broadcom_2023_QA_Pairs.json
Benchmarks/CRM_QA/: Salesforce_2020_10K_QA_Pairs.json  Salesforce_2021_10K_QA_Pairs.json  Salesforce_2022_10K_QA_Pairs.json  Salesforce_2023_10K_QA_Pairs.json  Salesforce_2024_10K_QA_Pairs.json
Benchmarks/GOOGL_QA/: GOOGL_10K_2019_QA.json  Google_2020_QA_Pairs.json  Google_2021_QA_Pairs.json  Google_2022_QA_Pairs.json  Google_2023_QA_Pairs.json
Benchmarks/META_QA/: Meta_2019_QA_Pairs.json  Meta_2020_QA_Pairs.json  Meta_2021_QA_Pairs.json  Meta_2022_10K_QA_Pairs.json  Meta_2023_10K_QA_Pairs.json
Benchmarks/MSFT_QA/: Microsoft_2019_10K_QA_Pairs.json  Microsoft_2020_10K_QA_Pairs.json  Microsoft_2021_10K_QA_Pairs.json  (+2 more)
(+15 files in other folders)
