[tool.poetry]
name = "10-k-rag"
version = "0.1.0"
description = ""
authors = ["Ankur Duggal <38927181+ankykong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.33"
llama-parse = "^0.4.2"
llama-index-core = "^0.10.33"
llama-index-readers-google = "^0.2.4"
llama-index-embeddings-openai = "^0.1.9"
llama-index-embeddings-cohere = "^0.1.8"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-llms-ollama = "^0.1.3"
llama-index-vector-stores-elasticsearch = "^0.1.7"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"
llama-index-packs-raft-dataset = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
